# senhasegura-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
mocks/: access_protected_information.yaml  create_protected_information.yaml  disable_protected_information.yaml  oauth2.yaml
senhasegura-c/: Cargo.toml  README.md  cbindgen.toml
senhasegura-c/src/: common.rs  error.rs  lib.rs
senhasegura-c/src/pam_core/: mod.rs
senhasegura-c/src/pam_core/protected_information/: access.rs  create.rs  disable.rs  mod.rs
senhasegura-js/: .gitignore  .npmignore  Cargo.toml  README.md  package.json
senhasegura-js/__test__/: index.spec.mjs
senhasegura-js/npm/linux-x64-gnu/: README.md  package.json
senhasegura-js/npm/win32-x64-msvc/: README.md  package.json
senhasegura-js/src/: lib.rs
senhasegura-js/src/pam_core/: protected_information.rs
senhasegura-rs/: Cargo.toml
senhasegura-rs/src/: auth.rs  common.rs  error.rs  lib.rs
senhasegura-rs/src/pam_core/: mod.rs
senhasegura-rs/src/pam_core/protected_information/: access.rs  create.rs  disable.rs  mod.rs
senhasegura-rs/tests/: fixture.rs  main.rs
senhasegura-rs/tests/pam_core/: mod.rs
senhasegura-rs/tests/pam_core/protected_information/: access.rs  create.rs  disable.rs  mod.rs
