[package]
name = "senhasegura-js"
version = "0.1.1"
edition = "2021"
publish = true
authors = ["Gabriel Kim<gabrielkim13@gmail.com>"]
license = "MIT"
description = "Senhasegura API client for Node.js"
repository = "https://github.com/gabrielkim13/senhasegura-rs"
homepage = "https://github.com/gabrielkim13/senhasegura-rs"

[lib]
crate-type = ["cdylib"]

[dependencies.senhasegura-rs]
path = "../senhasegura-rs"
features = ["napi"]

[build-dependencies]
napi-build = "2"
